jdk升级为21，springboot升级为3.3.7  其他与之相关的也相应升级